Patient Home Page - Date saving and UI design

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,7 @@
 
 en:
   hello: "Hello world"
+  controller:
+    patient:
+      all_fields: "Please fill all the fields."
+      success: "The Patients details are succefully update."
