--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,5 @@ en:
     patient:
       all_fields: "Please fill all the fields."
       success: "The Patients details are succefully update."
+  transaction:
+    error: "Something went wrong. Please try again."
