--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
   controller:
     patient:
       all_fields: "Please fill all the fields."
-      success: "The Patients details are succefully update and an Email has been Sent"
+      success: "The Patients details are successfully updated and an Email has been Sent"
+      saved: "The Patients details are successfully Saved for later submission"
   transaction:
     error: "Something went wrong. Please try again."
